[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.78" }
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["cookie"] }
chrono = { version = "0.4.35" }
dotenvy = { version = "0.15.7" }
jsonwebtoken = { version = "9.2.0" }
lazy_static = { version = "1.4.0"}
log = "0.4.21"
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0" }
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
validator = { version = "0.16.1" }

[dev-dependencies]
fake = { version = "=2.3.0" }
quickcheck = { version = "0.9.2" }
quickcheck_macros = { version = "0.9.1" }
reqwest = { version = "0.11.26", default-features = false, features = ["json", "cookies"]}